Newly created project shouldn't use window of previously opened project

Just close the existing project before

REVIEW:121321
BUG:340768